--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,10 +1,5 @@
-spring:
-datasource:
-url:jdbc:postgresql://localhost:5432/obmen
-username:postgres
-password:postgres
-jpa:
-hibernate:
-ddl-auto:update
-show-sql:true
-database-platform:org.hibernate.dialect.PostgreSQLDialect
+spring.datasource.url=jdbc:postgresql://localhost:5432/obmen
+spring.datasource.username=postgres
+spring.datasource.password=postgres
+spring.datasource.driver-class-name=org.postgresql.Driver
+spring.jpa.hibernate.ddl-auto=update
