spring fix and work

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -4,4 +4,4 @@ spring.datasource.password=postgres
 spring.datasource.driver-class-name=org.postgresql.Driver
 spring.jpa.hibernate.ddl-auto=update
 spring.main.allow-circular-references=true
-logging.level.org.springframework.beans=DEBUG
+#logging.level.org.springframework.beans=DEBUG
