--- a/pom.xml
+++ b/pom.xml
@@ -6,7 +6,7 @@
 
     <groupId>org.example</groupId>
     <artifactId>obmen</artifactId>
-    <version>1.1.1-SNAPSHOT</version>
+    <version>1.1.4</version>
 
     <properties>
         <maven.compiler.source>17</maven.compiler.source>
