--- a/pom.xml
+++ b/pom.xml
@@ -76,6 +76,11 @@
             <version>5.2.5</version>
         </dependency>
 
+        <dependency>
+            <groupId>org.springframework.boot</groupId>
+            <artifactId>spring-boot-starter-actuator</artifactId>
+        </dependency>
+
     </dependencies>
 
     <build>
