--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -5,5 +5,4 @@ spring.datasource.driver-class-name=org.postgresql.Driver
 spring.jpa.hibernate.ddl-auto=update
 spring.main.allow-circular-references=true
 #logging.level.org.springframework.beans=DEBUG
-management.endpoints.web.exposure.include=health
-management.endpoint.health.show-details=always
+spring.autoconfigure.exclude=org.springframework.boot.autoconfigure.security.servlet.SecurityAutoConfiguration
